@@ -107,6 +107,8 @@ Standard Library
   Coq.Numbers.DecimalString providing a type of decimal numbers, some
   facts about them, and conversions between decimal numbers and nat,
   positive, N, Z, and string.
+- Added [Coq.Strings.String.concat] to concatenate a list of strings
+  inserting a separator between each item
 
 Changes from 8.7.1 to 8.7.2
 ===========================
